lattices/tests/compile-fail-nightly/non_lattice_field.rs
../compile-fail/non_lattice_field.rs